--- a/assets/scss/index.scss
+++ b/assets/scss/index.scss
@@ -1,3 +1,14 @@
+
+@use '00_common/variables'; 
+
+@use '01_fundaments/fonts'; 
+
+@use '02_atoms/logo'; 
+
+@use '03_molecules/menu'; 
+
+@use '04_organisms/header'; 
+
 body {
     background-color: none;
 }
