"About" en "Latest Posts" secties toegevoegd aan de homepagina

--- a/assets/scss/00_common/_variables.scss
+++ b/assets/scss/00_common/_variables.scss
@@ -1,6 +1,11 @@
 //COLORS
-$primary-color: #377F9E ;
-$light-grey: #d0d0d0; 
+$primary-color: #377F9E;
+$primary-color-darker: #115673;
+$grey-light: #F2F2F2; 
+$grey-dark: #7F7F7F; 
+
+//common colors
+$white: white; 
 
 //FONTS
 $primary-font: 'KDG-font'; 
