Voeg profielen sectie met links en informatie toe aan de homepage

--- a/assets/scss/index.scss
+++ b/assets/scss/index.scss
@@ -1,7 +1,7 @@
-
 @use '00_common/variables'; 
 
 @use '01_fundaments/fonts'; 
+@use '01_fundaments/typography'; 
 
 @use '02_atoms/logo'; 
 @use '02_atoms/body'; 
