--- a/assets/scss/02_atoms/_buttons.scss
+++ b/assets/scss/02_atoms/_buttons.scss
@@ -6,7 +6,7 @@
     color: variables.$white; 
     font-family: variables.$secondary-font;
     font-size: 16px; 
-    width: 15vw;    
+    width: 240px;    
     height: 6vh; 
     border-radius: 8px; 
 }
