--- a/assets/scss/06_pages/_home.scss
+++ b/assets/scss/06_pages/_home.scss
@@ -1,25 +1,141 @@
 @use '00_common/variables.scss'; 
 
-.about-latest-container {
+.about-latest-container, .profiles {
     display: flex; 
-    gap: 15px; 
-    width: 100%; 
+    flex-direction: column;
 }
-.about {
-    background-color: variables.$grey-light;
-    padding: 10vh;
-    width: 50%; 
 
+.about, .profiles {
+    background-color: variables.$grey-light;
+}
+
+.about, .latest-posts {
+    padding: 10vh;
+}
+
+.about, .profiles-info {
     .paragraph-text {
-        font-size: 20px; 
+        font-size: min(2.8vw, 20px);
     }
 }
+
 .latest-posts {
-    padding: 20px; 
-    width: 50%; 
     display: flex; 
     flex-direction: column;
     justify-content: center;
     align-items: center;
     text-align: center;
+}
+
+.profiles-links, .profiles-info {
+    padding: 50px; 
+}
+
+.profiles-links {
+    display: flex; 
+    align-items: center;
+    justify-content: center;
+    gap: 20px; 
+    flex-wrap: wrap;
+
+    .profile-item {
+        display: flex; 
+        flex-direction: column;
+        align-items: center;
+        box-sizing: border-box; 
+        flex: 1 1 45%; 
+    }
+
+    .profile-icon-wrapper {
+        background-color: variables.$white;
+        border-radius: 50%;
+        padding: 2vh;
+        width: 90px; 
+        height: auto; 
+
+        img {
+            width: 100%; 
+            height: 100%;
+            object-fit: cover;
+        }
+    }
+
+    a {
+        color: variables.$primary-color; 
+        text-decoration: none;
+
+        &:hover {
+            color: variables.$primary-color-darker;
+            text-decoration: underline;
+        }
+    }
+}
+
+.profiles-info {
+    text-align: right;
+    padding: 10vh;
+}
+
+.subject-cards-container {
+    display: flex; 
+    gap: 20px; 
+    flex-direction: column;
+}
+
+.subject {
+    padding: 50px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    .primary-heading {
+        margin-bottom: 40px;
+    }
+
+    &-cards-container {
+        display: flex;
+        gap: 20px;
+    }
+
+    &-card {
+        display: flex;
+        border: 2px solid variables.$grey-light;
+        border-radius: 6px;
+        padding: 15px;
+
+        img {
+            width: 100px;
+            height: 100px;
+        }
+
+        &-info {
+            margin-left: 15px;
+        }
+
+        &-title {
+            font-size: 20px;
+            color: variables.$primary-color;
+            font-weight: 600;
+            margin: 0;
+        }
+
+        &-description {
+            font-size: 16px;
+        }
+    }
+}
+
+@media screen and (min-width: 768px) {
+    .about-latest-container, .profiles {
+        flex-direction: row;
+        gap: 15px; 
+        width: 100%; 
+    }
+    .about, .latest-posts, .profiles-links, .profiles-info {
+        width: 50%; 
+    }
+    .subject-cards-container {
+        flex-direction: row;
+        box-sizing: border-box;
+    }
 }
