Portfolio sectie toegevoegd aan de homepage

--- a/assets/scss/00_common/_variables.scss
+++ b/assets/scss/00_common/_variables.scss
@@ -1,8 +1,10 @@
 //COLORS
 $primary-color: #377F9E;
 $primary-color-darker: #115673;
+
 $grey-light: #F2F2F2; 
 $grey-dark: #7F7F7F; 
+$black-light: #1D1D1D; 
 
 //common colors
 $white: white; 
