--- a/assets/scss/06_pages/_home.scss
+++ b/assets/scss/06_pages/_home.scss
@@ -1,112 +1,19 @@
-@use '00_common/variables.scss'; 
+@use '00_common/variables'; 
 
-.about-latest-container, .profiles {
+@use '04_organisms/about'; 
+@use '04_organisms/latest_posts'; 
+@use '04_organisms/profiles'; 
+@use '04_organisms/discover'; 
+
+
+
+.subject-cards-container {
     display: flex; 
-    flex-direction: column;
-}
-
-.about, .profiles {
-    background-color: variables.$grey-light;
-}
-
-.about, .latest-posts {
-    padding: 10vh;
-}
-
-.about, .profiles-info {
-    .paragraph-text {
-        font-size: min(4vw, 20px);
-    }
-}
-
-.latest-posts {
-    display: flex; 
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-}
-
-.profiles-links, .profiles-info {
-    padding: 50px; 
-}
-
-.profiles-links {
-    display: flex; 
-    align-items: center;
-    justify-content: center;
     gap: 20px; 
-    flex-wrap: wrap;
-
-    .profile-item {
-        display: flex; 
-        flex-direction: column;
-        align-items: center;
-        box-sizing: border-box; 
-        flex: 1 1 45%; 
-    }
-
-    .profile-icon-wrapper {
-        background-color: variables.$white;
-        border-radius: 50%;
-        padding: 2vh;
-        width: 90px; 
-        height: auto; 
-
-        img {
-            width: 100%; 
-            height: 100%;
-            object-fit: cover;
-        }
-    }
-    .profile-icon-wrapper:hover {
-        background-color: #d6d8e3;
-    }
-
-    a {
-        color: variables.$primary-color; 
-        text-decoration: none;
-
-        &:hover {
-            color: variables.$primary-color-darker;
-            text-decoration: underline;
-        }
-    }
-}
-
-.profiles-info {
-    text-align: right;
-    padding: 10vh;
-}
-
-.discover-your-passion {
-    background-color: variables.$black-light;
-    color: variables.$white; 
-    display: flex; 
     flex-direction: column;
-    padding: 100px; 
-    align-items: center;
-    justify-content: center;
-    gap: 25px; 
-    text-align: center;
-
-    img {
-        width: 80px; 
-    }
-
-    .title {
-        font-size: 24px; 
-        font-weight: 600;
-        margin: 0; 
-    }
-    .description {
-        font-size: 16px;
-    }
 }
-
-
 .subject {
-    padding: 50px;
+    padding: 20px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -116,73 +23,77 @@
     }
 }
 
-.subject-cards-container {
-    display: flex; 
-    gap: 20px; 
-    flex-direction: column;
-    width: 80%; 
-}
-
 .subject-card {
-    display: flex; 
-    border: 2px solid variables.$grey-light; 
-    border-radius: 6px; 
+    border: 2px solid variables.$grey-light;
+    border-radius: 6px;
     padding: 15px; 
+    gap: 15px; 
+    width: 100%; 
+    display: flex; 
 
     .main-img {
         width: 100px; 
         height: 100px; 
-    }
-    &-info {
-        margin-left: 15px; 
+        object-fit: cover; 
     }
     &-title {
-        font-size: 20px; 
+        font-size: min(4vw, 20px);
         color: variables.$primary-color;
-        font-weight: 600;  
-        margin: 0; 
+        font-weight: 600;
+        margin: 0;
     }
+    &-description {
+        font-size: min(3.5vw, 16px); //16px
+    }
+    .creator-name {
+        font-size: min(3vw, 16px);;
+        font-weight: 600;
+        width: 100%;
+    }
+}
+.subject-card-info {
+    display: flex; 
+    flex-direction: column;
+    flex-grow: 1;
 }
 .subject-card:hover {
     background-color: variables.$grey-light;
 }
 
 .portfolio {
-    padding: 50px; 
+    padding: 20px;
     display: flex; 
+    flex-direction: column;
     align-items: center;
     justify-content: center;
-    flex-direction: column;
 
-    .subject-cards-container {
-        display: flex; 
-        flex-wrap: wrap;
-    }
-
-    .subject-card {
-        flex: 1 1 45%; 
+    .subject-card .main-img{
+        width: 25%; 
+        height: 100%; 
     }
 }
-
 .project-creator {
-    display: flex; 
+    display: flex;  
+    flex-grow: 1;
+    width: 100%; 
+    align-items: center;
     justify-content: space-between;
-    width: 180%; 
-    // background-color: red;
+    box-sizing: border-box;
     
     p, img {
         margin: 0; 
     }
-}
-.creator-details {
-    display: flex; 
-    align-items: center;
-    gap: 10px;
+    &-icon {
+        width: 20px; 
+    }
 }
 
-.project-creator-icon {
-    width: 20px; 
+.creator-details {
+    display: flex; 
+    width: auto; 
+    gap: 1vw; 
 }
+
 
 @media screen and (min-width: 768px) {
     .about-latest-container, .profiles {
@@ -201,7 +112,20 @@
         flex-direction: row;
         text-align: left;
     }
-    .project-creator {
-        width: 200%; 
+
+    .portfolio {
+        .subject-cards-container {
+            flex-wrap: wrap;
+            width: 70%; 
+        }
+
+        .subject-card {
+            flex: 1 1 calc(50% - 20px);
+            box-sizing: border-box;
+        }
+    }
+
+    .subject, .portfolio {
+        padding: 50px; 
     }
 }
