--- a/assets/scss/06_pages/_home.scss
+++ b/assets/scss/06_pages/_home.scss
@@ -4,6 +4,7 @@
 @use '04_organisms/latest_posts'; 
 @use '04_organisms/profiles'; 
 @use '04_organisms/discover'; 
+@use '04_organisms/faq'; 
 
 
 
@@ -66,10 +67,15 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    padding-bottom: 70px; 
 
     .subject-card .main-img{
         width: 25%; 
         height: 100%; 
+    }
+    &-heading {
+        padding: 40px; 
+        text-align: center;
     }
 }
 .project-creator {
