--- a/assets/scss/04_organisms/_faq.scss
+++ b/assets/scss/04_organisms/_faq.scss
@@ -24,6 +24,7 @@
         justify-content: space-between;
         align-items: center; 
         width: 100%; 
+        border: 1px solid black; 
     }
 }
 
