Contactformulier toegevoegd op de startpagina

--- a/assets/scss/00_common/_variables.scss
+++ b/assets/scss/00_common/_variables.scss
@@ -2,7 +2,7 @@
 $primary-color: #377F9E;
 $primary-color-darker: #115673;
 
-$grey-light: #F2F2F2; 
+$grey-light: rgba(0, 0, 0, 0.1); 
 $grey-dark: #7F7F7F; 
 $black-light: #1D1D1D; 
 
