--- a/assets/scss/02_atoms/_buttons.scss
+++ b/assets/scss/02_atoms/_buttons.scss
@@ -13,6 +13,7 @@
     color: variables.$white;
     width: 240px;   
     font-weight: 500; 
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
 }
 .primary-btn:hover {
     background-color: variables.$primary-color-darker;
