--- a/assets/scss/01_fundaments/_typography.scss
+++ b/assets/scss/01_fundaments/_typography.scss
@@ -6,6 +6,10 @@
     font-size: 50px; 
     margin: 0; 
 }
+.sub-heading {
+    font-size: 14px; 
+    font-weight: 600; 
+}
 .paragraph-text {
     font-size: 16px; 
 }
