--- a/assets/scss/04_organisms/_footer.scss
+++ b/assets/scss/04_organisms/_footer.scss
@@ -6,7 +6,8 @@
     color: variables.$white; 
     padding: 100px; 
     display: flex; 
-    justify-content: space-between;
+    flex-direction: column;
+    align-items: center;
 }
 
 .footer-branding {
@@ -17,6 +18,7 @@
 
 .footer-links {
     display: flex; 
+    flex-direction: column;
     width: 50%; 
     gap: 20px; 
 
@@ -35,5 +37,16 @@
     .footer-column {
         flex: 1; 
         word-wrap: break-word;
+    }
+}
+
+@media screen and (min-width: 768px) {
+    .footer {
+        flex-direction: row;
+        align-items: normal;
+        justify-content: space-between;
+    }
+    .footer-links {
+        flex-direction: row;
     }
 }
