--- a/assets/scss/06_pages/home-page/_contact-us.scss
+++ b/assets/scss/06_pages/home-page/_contact-us.scss
@@ -3,7 +3,7 @@
 .contact-us {
     display: flex; 
     flex-direction: column;
-    padding: 100px; 
+    padding: 50px; 
     gap: 70px; 
     border-bottom: 1px solid variables.$grey-light; 
 }
@@ -56,5 +56,11 @@
     }
     .buttons a {
         width: 50%; 
+    }
+}
+
+@media (min-width: 768px) { 
+    .contact-us {
+        padding: 100px; 
     }
 }
