--- a/assets/scss/00_common/_variables.scss
+++ b/assets/scss/00_common/_variables.scss
@@ -1,7 +1,8 @@
 //COLORS
 $primary-color: #377F9E;
 $primary-color-darker: #115673;
-$dark-blue: rgba(55, 127, 158, 0.712); 
+$primary-color-transparent: rgba(55, 127, 158, 0.712); 
+$dark-blue: #2A4E5D; 
 
 $grey-light: rgba(0, 0, 0, 0.1); 
 $grey-dark: #7F7F7F; 
