--- a/assets/scss/index.scss
+++ b/assets/scss/index.scss
@@ -12,6 +12,8 @@
 
 @use '04_organisms/header'; 
 @use '04_organisms/footer'; 
+@use '04_organisms/default';
 
 @use '06_pages/home-page/home'; 
 @use '06_pages/courses'; 
+@use '06_pages/events'; 
