--- a/assets/scss/06_pages/home-page/_profiles.scss
+++ b/assets/scss/06_pages/home-page/_profiles.scss
@@ -20,23 +20,6 @@
         flex: 1 1 45%; 
     }
 
-    .profile-icon-wrapper {
-        background-color: variables.$white;
-        border-radius: 50%;
-        padding: 2vh;
-        width: 90px; 
-        height: auto; 
-
-        img {
-            width: 100%; 
-            height: 100%;
-            object-fit: cover;
-        }
-    }
-    .profile-icon-wrapper:hover {
-        background-color: #d6d8e3;
-    }
-
     a {
         color: variables.$primary-color; 
         text-decoration: none;
@@ -51,4 +34,21 @@
 .profiles-info {
     text-align: right;
     padding: 10vh;
+}
+
+.icon-wrapper {
+    background-color: variables.$white;
+    border-radius: 50%;
+    padding: 2vh;
+    width: 90px; 
+    height: auto; 
+
+    img {
+        width: 100%; 
+        height: 100%;
+        object-fit: cover;
+    }
+}
+.icon-wrapper:hover {
+    background-color: #d6d8e3;
 }
