--- a/assets/scss/index.scss
+++ b/assets/scss/index.scss
@@ -7,6 +7,7 @@
 @use '02_atoms/body'; 
 @use '02_atoms/hero-image';
 @use '02_atoms/buttons';  
+@use '02_atoms/messages'; 
 
 @use '03_molecules/menu'; 
 
