Slider ingesteld voor afbeeldingen

--- a/assets/scss/index.scss
+++ b/assets/scss/index.scss
@@ -14,6 +14,7 @@
 @use '04_organisms/header'; 
 @use '04_organisms/footer'; 
 @use '04_organisms/default';
+@use '04_organisms/img-slider'; 
 
 @use '06_pages/home-page/home'; 
 @use '06_pages/courses'; 
