--- a/assets/scss/04_organisms/_header.scss
+++ b/assets/scss/04_organisms/_header.scss
@@ -23,9 +23,9 @@
     z-index: 1000;  
 }
 .logo {
-    img {
-        width: 30px; 
-    }
+    // img {
+    //     width: 30px; 
+    // }
 
     a {
         font-size: min(5vw, 20px);
@@ -38,11 +38,11 @@
     padding: 5px; 
 
     svg {
-        width: 20px; 
+        width: 25px; 
         transform: scaleX(-1);
     }
-    .close-icon svg {
-        display: none; 
+    svg:hover {
+        color: variables.$primary-color; 
     }
 }
 
